--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -148,6 +148,10 @@
         "@yarnpkg/plugin-npm": "2.4.0",
         "@yarnpkg/plugin-pack": "2.2.3",
         "ansi-to-html": "^0.6.14",
+        "apollo-link-http": "1.5.17",
+        "apollo-link-ws": "1.0.20",
+        "apollo-server": "2.19.2",
+        "apollo-utilities": "1.3.4",
         "aws-sdk": "2.756.0",
         "babel-jest": "^26.0.1",
         "babel-plugin-named-asset-import": "^0.3.6",
@@ -271,6 +275,7 @@
         "webpack-manifest-plugin": "^2.2.0",
         "webpack-merge": "^5.7.3",
         "workbox-webpack-plugin": "^5.1.3",
+        "ws": "7.4.2",
         "yaml": "1.10.0"
       },
       "peerDependencies": {
