--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -125,6 +125,7 @@
         "@types/lodash": "4.14.165",
         "@types/lodash.compact": "3.0.6",
         "@types/lodash.head": "^4.0.6",
+        "@types/lodash.pick": "4.4.6",
         "@types/mdx-js__react": "1.5.3",
         "@types/mime": "2.0.3",
         "@types/mousetrap": "^1.6.3",
@@ -202,6 +203,7 @@
         "lodash": "4.17.20",
         "lodash.compact": "3.0.1",
         "lodash.head": "^4.0.1",
+        "lodash.pick": "4.4.0",
         "memoize-one": "5.1.1",
         "memory-fs": "0.5.0",
         "mime": "^2.4.6",
