CircleCI: extend the timeout of bit-export to 20m

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -587,6 +587,7 @@ jobs:
       - run:
           name: export components
           command: cd bit && bit export
+          no_output_timeout: '20m'
       - run:
           name: backup bit objects (after export)
           command: cd bit && tar -zcvf objects-after-export.tar .git/bit/objects
