--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -214,6 +214,7 @@
         "mini-css-extract-plugin": "^0.9.0",
         "minimatch": "3.0.4",
         "mousetrap": "^1.6.5",
+        "nanoid": "3.1.20",
         "nerf-dart": "1.0.0",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "parallel-webpack": "^2.6.0",
