--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -37,12 +37,14 @@
         "@pnpm/store-connection-manager": "0.3.62",
         "@pnpm/tarball-fetcher": "8.2.8",
         "@pnpm/tarball-resolver": "4.0.7",
+        "@popperjs/core": "2.6.0",
         "@stencil/core": "1.17.4",
         "@stencil/webpack": "0.0.6",
         "@svgr/webpack": "5.5.0",
         "@teambit/any-fs": "0.0.5",
         "@teambit/base-ui.constants.storage": "0.6.3",
         "@teambit/base-ui.css-components.roundness": "0.6.3",
+        "@teambit/base-ui.css-components.pill": "0.6.7",
         "@teambit/base-ui.elements.dots-loader": "0.6.3",
         "@teambit/base-ui.elements.image": "0.6.3",
         "@teambit/base-ui.elements.label": "0.6.3",
@@ -72,6 +74,8 @@
         "@teambit/base-ui.theme.fonts.roboto": "0.6.7",
         "@teambit/base-ui.theme.sizes": "0.6.7",
         "@teambit/base-ui.theme.theme-provider": "0.6.7",
+        "@teambit/base-ui.utils.popper-js.ignore-popper-size": "0.6.3",
+        "@teambit/base-ui.utils.popper-js.resize-to-match-reference": "0.6.3",
         "@teambit/base-ui.utils.string.affix": "0.0.2",
         "@teambit/base-ui.utils.sub-paths": "0.6.3",
         "@teambit/base-ui.utils.time-ago": "0.5.9",
@@ -253,6 +257,7 @@
         "react-flow-renderer": "8.3.7",
         "react-hot-loader": "4.13.0",
         "react-live": "2.2.3",
+        "react-popper": "2.2.4",
         "react-router-dom": "5.2.0",
         "react-syntax-highlighter": "15.4.3",
         "react-tabs": "3.2.0",
