--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -187,6 +187,7 @@
         "fuse.js": "^6.4.1",
         "get-port": "^5.1.1",
         "globby": "11.0.1",
+        "graceful-fs": "4.2.4",
         "graphql-subscriptions": "^1.1.0",
         "graphql-tag": "^2.10.3",
         "graphql-tools": "6.2.4",
