--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -21,23 +21,23 @@
         "@mdx-js/mdx": "1.6.21",
         "@mdx-js/react": "1.6.22",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.3.2",
-        "@pnpm/client": "2.0.4",
-        "@pnpm/config": "11.3.0",
-        "@pnpm/default-reporter": "7.9.1",
-        "@pnpm/default-resolver": "11.0.3",
-        "@pnpm/error": "1.3.1",
-        "@pnpm/fetch": "2.1.5",
+        "@pnpm/client": "2.0.21",
+        "@pnpm/config": "11.13.0",
+        "@pnpm/default-reporter": "7.10.3",
+        "@pnpm/default-resolver": "11.0.18",
+        "@pnpm/error": "1.4.0",
+        "@pnpm/fetch": "2.1.10",
         "@pnpm/fetching-types": "1.0.0",
-        "@pnpm/git-resolver": "4.1.4",
-        "@pnpm/local-resolver": "5.0.14",
-        "@pnpm/logger": "3.2.2",
-        "@pnpm/npm-resolver": "10.0.2",
-        "@pnpm/package-store": "10.1.0",
-        "@pnpm/pick-registry-for-package": "1.0.3",
-        "@pnpm/resolver-base": "7.0.3",
-        "@pnpm/store-connection-manager": "0.3.35",
-        "@pnpm/tarball-fetcher": "8.2.2",
-        "@pnpm/tarball-resolver": "4.0.3",
+        "@pnpm/git-resolver": "4.1.11",
+        "@pnpm/local-resolver": "5.1.3",
+        "@pnpm/logger": "3.2.3",
+        "@pnpm/npm-resolver": "10.2.2",
+        "@pnpm/package-store": "10.1.17",
+        "@pnpm/pick-registry-for-package": "1.0.6",
+        "@pnpm/resolver-base": "7.1.1",
+        "@pnpm/store-connection-manager": "0.3.62",
+        "@pnpm/tarball-fetcher": "8.2.8",
+        "@pnpm/tarball-resolver": "4.0.7",
         "@stencil/core": "^1.15.0",
         "@stencil/webpack": "0.0.6",
         "@svgr/webpack": "^5.4.0",
@@ -187,6 +187,8 @@
         "fuse.js": "^6.4.1",
         "get-port": "^5.1.1",
         "globby": "11.0.1",
+        // TODO: remove this once this is merged https://github.com/isaacs/node-graceful-fs/pull/202
+        "graceful-fs": "4.2.4",
         "graphql-subscriptions": "^1.1.0",
         "graphql-tag": "^2.10.3",
         "graphql-tools": "6.2.4",
@@ -257,7 +259,7 @@
         "string-to-color": "^2.1.3",
         "strip-ansi": "6.0.0",
         "subscriptions-transport-ws": "^0.9.16",
-        "supi": "0.42.0",
+        "supi": "0.44.3",
         "terser-webpack-plugin": "^4.1.0",
         "typedoc": "0.18.0",
         "typescript-language-server": "0.4.0",
@@ -476,7 +478,9 @@
             "browserslist": "^4",
             "reflect-metadata": "^0.1.13",
             "mz": "^2.7.0",
-            "react-refresh": "^0.8.2"
+            "react-refresh": "^0.8.2",
+            // TODO: remove this once this is merged https://github.com/isaacs/node-graceful-fs/pull/202
+            "graceful-fs": "4.2.4"
           },
           "devDependencies": {
             "@types/react": "^16.9.43",
