--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -112,6 +112,7 @@
         "@teambit/harmony": "0.2.11",
         "@testing-library/jest-dom": "^5.9.0",
         "@testing-library/react": "11.0.4",
+        "@tippyjs/react": "^4.2.0",
         "@types/classnames": "^2.2.10",
         "@types/cors": "^2.8.6",
         "@types/cross-spawn": "^6.0.2",
@@ -245,7 +246,6 @@
         "react-syntax-highlighter": "15.4.3",
         "react-tabs": "^3.1.1",
         "react-test-renderer": "^16.13.1",
-        "react-tooltip": "^4.2.8",
         "remark-frontmatter": "2.0.0",
         "reset-css": "^5.0.1",
         "resolve-from": "5.0.0",
@@ -261,6 +261,7 @@
         "subscriptions-transport-ws": "^0.9.16",
         "supi": "0.44.3",
         "terser-webpack-plugin": "^4.1.0",
+        "tippy.js": "^6.2.7",
         "typedoc": "0.18.0",
         "typescript-language-server": "0.4.0",
         "unist-util-remove": "2.0.1",
