--- a/scripts/docker-teambit-bit/Dockerfile
+++ b/scripts/docker-teambit-bit/Dockerfile
@@ -1,14 +1,13 @@
 FROM node:12.18.3
 RUN adduser --disabled-password --gecos '' user
 RUN chown -R user /usr/local/
-USER root
+USER user
 RUN npm i @teambit/bit -g --unsafe-perm=true
 RUN bbit config set analytics_reporting false
 RUN bbit config set no_warnings false
 RUN bbit config set interactive false
 RUN bbit config set error_reporting true
 RUN ln -s /usr/local/bin/bbit /usr/local/bin/bit
-#USER user
 RUN mkdir -p /root/Library/Caches/Bit/logs
 RUN ln -s /tmp/symphony/etc/.bitrc.jsonc ~/.bitrc.jsonc
 WORKDIR /tmp/scope-fs
