update version to require react 16.8 (hooks)

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -288,8 +288,8 @@
         "browserslist": "^4",
         "graphql": "^14.3.1",
         "mz": "^2.7.0",
-        "react": "^16.0.0 || ^17.0.0",
-        "react-dom": "^16.0.0 || ^17.0.0"
+        "react": ">=16.8.0 || ^17.0.0",
+        "react-dom": ">=16.8.0 || ^17.0.0"
       }
     },
     "packageManagerArgs": [],
@@ -340,8 +340,8 @@
           },
           "peerDependencies": {
             "bit-bin": "14.8.9-dev.289",
-            "react": "^16.0.0 || ^17.0.0",
-            "react-dom": "^16.0.0 || ^17.0.0"
+            "react": ">=16.8.0 || ^17.0.0",
+            "react-dom": ">=16.8.0 || ^17.0.0"
           }
         }
       },
@@ -491,8 +491,8 @@
             "bit-bin": "-",
             "browserslist": "-",
             "graphql": "-",
-            "react": "^16.0.0 || ^17.0.0",
-            "react-dom": "^16.0.0 || ^17.0.0",
+            "react": ">=16.8.0 || ^17.0.0",
+            "react-dom": ">=16.8.0 || ^17.0.0"
           }
         }
       }
