--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -16,6 +16,8 @@
         "@babel/preset-react": "7.12.7",
         "@babel/preset-typescript": "7.10.4",
         "@graphql-modules/core": "^0.7.17",
+        "@harmony-mfe/people.ui.user-profile.hero": "^0.1.2",
+        "@harmony-mfe/scopes.ui.scopes.scopes-list": "0.1.10",
         "@jest/test-result": "26.6.2",
         "@mdx-js/loader": "1.6.21",
         "@mdx-js/mdx": "1.6.21",
@@ -44,6 +46,7 @@
         "@teambit/any-fs": "0.0.5",
         "@teambit/base-ui.constants.storage": "^0.5.9",
         "@teambit/base-ui.css-components.roundness": "^0.5.9",
+        "@teambit/base-ui.elements.dots-loader": "0.6.3",
         "@teambit/base-ui.elements.separator": "^0.5.9",
         "@teambit/base-ui.graph.tree.indent": "0.0.1",
         "@teambit/base-ui.graph.tree.inflate-paths": "0.0.1",
@@ -284,18 +287,14 @@
       }
     },
     "packageManagerArgs": [],
-    "devFilePatterns": [
-      "**/*.spec.ts"
-    ],
+    "devFilePatterns": ["**/*.spec.ts"],
     "strictPeerDependencies": true,
     "extraArgs": []
   },
   "teambit.workspace/variants": {
     "*": {
       "teambit.pkg/pkg": {
-        "packageManagerPublishArgs": [
-          "--access public"
-        ],
+        "packageManagerPublishArgs": ["--access public"],
         "packageJson": {
           "name": "@teambit/{name}",
           "private": false,
@@ -449,9 +448,7 @@
     "scopes/harmony/bit": {
       "teambit.pkg/pkg": {
         "packageJson": {
-          "packageManagerPublishArgs": [
-            "--access public"
-          ],
+          "packageManagerPublishArgs": ["--access public"],
           "name": "@teambit/{name}", // @teambit/discovery.ui.sidebar
           "private": false,
           // Change back to "bin": "bin/bit" once released to prod
