copy components from harmony-mfe to composition docs

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -16,8 +16,6 @@
         "@babel/preset-react": "7.12.7",
         "@babel/preset-typescript": "7.10.4",
         "@graphql-modules/core": "^0.7.17",
-        "@harmony-mfe/people.ui.user-profile.hero": "^0.1.2",
-        "@harmony-mfe/scopes.ui.scopes.scopes-list": "0.1.10",
         "@jest/test-result": "26.6.2",
         "@mdx-js/loader": "1.6.21",
         "@mdx-js/mdx": "1.6.21",
@@ -54,6 +52,7 @@
         "@teambit/base-ui.graph.tree.root-node": "0.0.1",
         "@teambit/base-ui.graph.tree.tree-context": "0.0.1",
         "@teambit/base-ui.input.error": "^0.5.9",
+        "@teambit/base-ui.elements.label": "^0.6.3",
         "@teambit/base-ui.layout.breakpoints": "^0.5.9",
         "@teambit/base-ui.layout.grid-component": "^0.5.9",
         "@teambit/base-ui.layout.page-frame": "^0.5.9",
