remove test files and scope-descriptor component from composition docs

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -52,6 +52,7 @@
         "@teambit/base-ui.graph.tree.root-node": "0.0.1",
         "@teambit/base-ui.graph.tree.tree-context": "0.0.1",
         "@teambit/base-ui.input.error": "^0.5.9",
+        "@teambit/base-ui.elements.image": "^0.6.3",
         "@teambit/base-ui.elements.label": "^0.6.3",
         "@teambit/base-ui.layout.breakpoints": "^0.5.9",
         "@teambit/base-ui.layout.grid-component": "^0.5.9",
@@ -60,6 +61,7 @@
         "@teambit/base-ui.surfaces.card": "^0.5.9",
         "@teambit/base-ui.surfaces.split-pane.hover-splitter": "^0.5.9",
         "@teambit/base-ui.surfaces.split-pane.split-pane": "0.6.1",
+        "@teambit/base-ui.text.heading": "^0.6.3",
         "@teambit/base-ui.text.muted-text": "^0.5.9",
         "@teambit/base-ui.text.paragraph": "^0.5.9",
         "@teambit/base-ui.text.themed-text": "^0.5.9",
