--- a/package.json
+++ b/package.json
@@ -129,9 +129,10 @@
     "fs-extra": "^9.0.1",
     "glob": "^7.1.6",
     "graphlib": "^2.1.8",
-    "graphql-request": "3.0.0",
+    "graphql-request": "3.4.0",
     "graphviz": "0.0.9",
     "group-array": "^1.0.0",
+    "https-proxy-agent": "5.0.0",
     "ignore": "^3.3.7",
     "ini-builder": "^1.1.1",
     "ink": "^3.0.5",
