use react 17 in react env, and react 16 in react-native-web

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -137,7 +137,6 @@
         "@types/react-dom": "17.0.0",
         "@types/react-router-dom": "^5.1.5",
         "@types/react-tabs": "^2.3.2",
-        "@types/react-transition-group": "^4.4.0",
         "@types/socket.io-client": "^1.4.33",
         "@types/url-parse": "1.4.3",
         "@types/webpack": "4.41.25",
@@ -232,7 +231,6 @@
         "postcss-preset-env": "^6.7.0",
         "postcss-safe-parser": "^4.0.2",
         "pretty-time": "^1.1.0",
-        "prism-react-renderer": "^1.1.1",
         "proper-lockfile": "^4.1.1",
         "react": "^17.0.1",
         "react-animate-height": "2.0.23",
@@ -240,12 +238,10 @@
         "react-dom": "^17.0.1",
         "react-error-overlay": "^6.0.7",
         "react-flow-renderer": "8.3.7",
-        "react-hot-loader": "^4.12.21",
-        "react-live": "^2.2.2",
         "react-router-dom": "^5.2.0",
         "react-syntax-highlighter": "15.4.3",
         "react-tabs": "^3.1.1",
-        "react-test-renderer": "^16.13.1",
+        "react-test-renderer": "^17.0.1",
         "remark-frontmatter": "2.0.0",
         "reset-css": "^5.0.1",
         "resolve-from": "5.0.0",
@@ -288,8 +284,8 @@
         "browserslist": "^4",
         "graphql": "^14.3.1",
         "mz": "^2.7.0",
-        "react": ">=16.8.0 || ^17.0.0",
-        "react-dom": ">=16.8.0 || ^17.0.0"
+        // "react": ">=16.8.0 || ^17.0.0",
+        // "react-dom": ">=16.8.0 || ^17.0.0"
       }
     },
     "packageManagerArgs": [],
