--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -149,7 +149,6 @@
         "@yarnpkg/plugin-npm": "2.4.0",
         "@yarnpkg/plugin-pack": "2.2.3",
         "ansi-to-html": "^0.6.14",
-        "apollo-link-context": "1.0.20",
         "apollo-link-http": "1.5.17",
         "apollo-link-ws": "1.0.20",
         "apollo-server": "2.19.2",
@@ -355,6 +354,11 @@
         "env": "teambit.harmony/node"
       },
       "teambit.harmony/node": {}
+    },
+    "{cli/*}": {
+      "teambit.envs/envs": {
+        "env": "teambit.react/react"
+      }
     },
     "{babel/*}": {
       "teambit.envs/envs": {
