--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -44,6 +44,7 @@
         "@teambit/any-fs": "0.0.5",
         "@teambit/base-ui.constants.storage": "^0.5.9",
         "@teambit/base-ui.css-components.roundness": "^0.5.9",
+        "@teambit/base-ui.elements.dots-loader": "0.6.3",
         "@teambit/base-ui.elements.separator": "^0.5.9",
         "@teambit/base-ui.graph.tree.indent": "0.0.1",
         "@teambit/base-ui.graph.tree.inflate-paths": "0.0.1",
@@ -51,6 +52,8 @@
         "@teambit/base-ui.graph.tree.root-node": "0.0.1",
         "@teambit/base-ui.graph.tree.tree-context": "0.0.1",
         "@teambit/base-ui.input.error": "^0.5.9",
+        "@teambit/base-ui.elements.image": "^0.6.3",
+        "@teambit/base-ui.elements.label": "^0.6.3",
         "@teambit/base-ui.layout.breakpoints": "^0.5.9",
         "@teambit/base-ui.layout.grid-component": "^0.5.9",
         "@teambit/base-ui.layout.page-frame": "^0.5.9",
@@ -58,6 +61,7 @@
         "@teambit/base-ui.surfaces.card": "^0.5.9",
         "@teambit/base-ui.surfaces.split-pane.hover-splitter": "^0.5.9",
         "@teambit/base-ui.surfaces.split-pane.split-pane": "0.6.1",
+        "@teambit/base-ui.text.heading": "^0.6.3",
         "@teambit/base-ui.text.muted-text": "^0.5.9",
         "@teambit/base-ui.text.paragraph": "^0.5.9",
         "@teambit/base-ui.text.themed-text": "^0.5.9",
@@ -110,6 +114,7 @@
         "@teambit/evangelist.surfaces.tooltip": "0.5.4",
         "@teambit/evangelist.theme.icon-font": "0.5.5",
         "@teambit/harmony": "0.2.11",
+        "@teambit/ui.composition-card": "0.0.259",
         "@testing-library/jest-dom": "^5.9.0",
         "@testing-library/react": "11.0.4",
         "@tippyjs/react": "^4.2.0",
@@ -292,18 +297,14 @@
       }
     },
     "packageManagerArgs": [],
-    "devFilePatterns": [
-      "**/*.spec.ts"
-    ],
+    "devFilePatterns": ["**/*.spec.ts"],
     "strictPeerDependencies": true,
     "extraArgs": []
   },
   "teambit.workspace/variants": {
     "*": {
       "teambit.pkg/pkg": {
-        "packageManagerPublishArgs": [
-          "--access public"
-        ],
+        "packageManagerPublishArgs": ["--access public"],
         "packageJson": {
           "name": "@teambit/{name}",
           "private": false,
@@ -462,9 +463,7 @@
     "scopes/harmony/bit": {
       "teambit.pkg/pkg": {
         "packageJson": {
-          "packageManagerPublishArgs": [
-            "--access public"
-          ],
+          "packageManagerPublishArgs": ["--access public"],
           "name": "@teambit/{name}", // @teambit/discovery.ui.sidebar
           "private": false,
           // Change back to "bin": "bin/bit" once released to prod
