return set setcontex on remote schema

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -45,6 +45,8 @@
         "@teambit/base-ui.constants.storage": "^0.5.9",
         "@teambit/base-ui.css-components.roundness": "^0.5.9",
         "@teambit/base-ui.elements.dots-loader": "0.6.3",
+        "@teambit/base-ui.elements.image": "^0.6.3",
+        "@teambit/base-ui.elements.label": "^0.6.3",
         "@teambit/base-ui.elements.separator": "^0.5.9",
         "@teambit/base-ui.graph.tree.indent": "0.0.1",
         "@teambit/base-ui.graph.tree.inflate-paths": "0.0.1",
@@ -52,8 +54,6 @@
         "@teambit/base-ui.graph.tree.root-node": "0.0.1",
         "@teambit/base-ui.graph.tree.tree-context": "0.0.1",
         "@teambit/base-ui.input.error": "^0.5.9",
-        "@teambit/base-ui.elements.image": "^0.6.3",
-        "@teambit/base-ui.elements.label": "^0.6.3",
         "@teambit/base-ui.layout.breakpoints": "^0.5.9",
         "@teambit/base-ui.layout.grid-component": "^0.5.9",
         "@teambit/base-ui.layout.page-frame": "^0.5.9",
@@ -154,6 +154,7 @@
         "@yarnpkg/plugin-npm": "2.4.0",
         "@yarnpkg/plugin-pack": "2.2.3",
         "ansi-to-html": "^0.6.14",
+        "apollo-link-context": "1.0.20",
         "apollo-link-http": "1.5.17",
         "apollo-link-ws": "1.0.20",
         "apollo-server": "2.19.2",
