--- a/scopes/harmony/config/workspace-template.jsonc
+++ b/scopes/harmony/config/workspace-template.jsonc
@@ -20,6 +20,11 @@
     "icon": "https://static.bit.dev/bit-logo.svg",
 
     /**
+     * default directory for all components in workspace.
+     **/
+    "defaultDirectory": "{scope}/{name}",
+
+    /**
      * default scope for all components in workspace.
      **/
     "defaultScope": "my-scope"
