--- a/package.json
+++ b/package.json
@@ -1,9 +1,54 @@
 {
-  "name": "bit-bin",
-  "version": "14.8.9-dev.298",
+  "name": "@teambit/legacy",
+  "version": "1.0.0",
   "license": "Apache-2.0",
   "main": "./dist/api.js",
   "preferGlobal": true,
+  "private": false,
+  "files": [
+    "/bin",
+    "/legacy-capsule",
+    "/dist"
+  ],
+  "engines": {
+    "node": ">=12.15.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,js,tsx,css,scss}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "pkg": {
+    "assets": [
+      "dist/analytics/analytics-sender.js",
+      "dist/specs-runner/worker.js"
+    ]
+  },
+  "bin": {
+    "bit": "bin/bit.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/teambit/bit"
+  },
+  "keywords": [
+    "bit",
+    "components",
+    "collaboration",
+    "web",
+    "react",
+    "react-components",
+    "angular",
+    "angular-components",
+    "vue",
+    "vue-components"
+  ],
   "scripts": {
     "dev-link": "node ./scripts/establish-dev-link.js $1",
     "ts-coverage": "type-coverage",
@@ -71,31 +116,6 @@
     "build:pjson": "cp package.json dist/",
     "build:src": "babel src -d dist --verbose --extensions \".ts,.tsx,.js\" --copy-files"
   },
-  "pkg": {
-    "assets": [
-      "dist/analytics/analytics-sender.js",
-      "dist/specs-runner/worker.js"
-    ]
-  },
-  "bin": {
-    "bit": "bin/bit.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/teambit/bit"
-  },
-  "keywords": [
-    "bit",
-    "components",
-    "collaboration",
-    "web",
-    "react",
-    "react-components",
-    "angular",
-    "angular-components",
-    "vue",
-    "vue-components"
-  ],
   "dependencies": {
     "@babel/core": "^7.9.6",
     "@babel/runtime": "^7.8.4",
@@ -276,24 +296,5 @@
     "type-coverage": "^2.4.2",
     "typescript": "4.1.2",
     "verdaccio": "^4.5.1"
-  },
-  "files": [
-    "/bin",
-    "/legacy-capsule",
-    "/dist"
-  ],
-  "engines": {
-    "node": ">=12.15.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{ts,js,tsx,css,scss}": [
-      "prettier --write",
-      "git add"
-    ]
   }
 }
