--- a/package.json
+++ b/package.json
@@ -82,14 +82,14 @@
     "build": "npm run build:src",
     "build:types": "./scripts/build-types.bash",
     "install-harmony": "cd build-harmony && yarn",
-    "link-bit-bin": "rm -rf node_modules/bit-bin && ln -sf `pwd` node_modules/bit-bin",
+    "link-bit-legacy": "rm -rf node_modules/@teambit/legacy && ln -sf `pwd` node_modules/@teambit/legacy",
     "import-harmony": "build-harmony/node_modules/.bin/bbit import",
     "status-harmony": "build-harmony/node_modules/.bin/bbit status",
-    "build-harmony": "build-harmony/node_modules/.bin/bbit install && npm run link-bit-bin && build-harmony/node_modules/.bin/bbit compile",
-    "build-harmony-skip-import": "build-harmony/node_modules/.bin/bbit install --skip-import && npm run link-bit-bin && build-harmony/node_modules/.bin/bbit compile",
+    "build-harmony": "build-harmony/node_modules/.bin/bbit install && npm run link-bit-legacy && build-harmony/node_modules/.bin/bbit compile",
+    "build-harmony-skip-import": "build-harmony/node_modules/.bin/bbit install --skip-import && npm run link-bit-legacy && build-harmony/node_modules/.bin/bbit compile",
     "link-harmony": "build-harmony/node_modules/.bin/bbit link",
     "full-setup": "npm run install-harmony && npm run build-harmony && npm run build && npm run build:types",
-    "full-setup:bbit": "rm -rf node_modules/bit-bin && bbit install && ln -sf `pwd` node_modules/bit-bin && bbit compile && npm run build && npm run build:types",
+    "full-setup:bbit": "rm -rf node_modules/@teambit/legacy && bbit install && npm run link-bit-legacy && bbit compile && npm run build && npm run build:types",
     "build-centos-image": "docker build ./scripts/linux/centos -t centos-rpm",
     "build-debian-image": "docker build ./scripts/linux/debian -t debian-deb",
     "doc-gen": "node ./scripts/doc-generator.js",
@@ -101,10 +101,10 @@
     "watch": "babel --watch src -d dist --verbose --source-maps --extensions \".ts,.tsx,.js\" --copy-files",
     "build-debug": "babel src -d dist --source-maps --extensions \".ts\"",
     "prepublishOnly": "npm run clean && npm run build && npm run build:types",
-    "pre-release": "gh-release -a releases/bit-bin-linux,releases/bit-bin-win.exe,releases/bit-bin-macos --prerelease",
-    "release": "gh-release -a releases/bit-bin-linux,releases/bit-bin-win.exe,releases/bit-bin-macos",
-    "release:circle": "gh-release -a releases/bit-bin-linux,releases/bit-bin-win.exe,releases/bit-bin-macos -y",
-    "pre-release:circle": "gh-release -a releases/bit-bin-linux,releases/bit-bin-win.exe,releases/bit-bin-macos -y --prerelease",
+    "pre-release": "gh-release -a releases/bit-legacy-linux,releases/bit-legacy-win.exe,releases/bit-legacy-macos --prerelease",
+    "release": "gh-release -a releases/bit-legacy-linux,releases/bit-legacy-win.exe,releases/bit-legacy-macos",
+    "release:circle": "gh-release -a releases/bit-legacy-linux,releases/bit-legacy-win.exe,releases/bit-legacy-macos -y",
+    "pre-release:circle": "gh-release -a releases/bit-legacy-linux,releases/bit-legacy-win.exe,releases/bit-legacy-macos -y --prerelease",
     "pre-release:inc-pack": "npm run pkg:all && npm run pre-release",
     "release:inc-pack": "npm run pkg:all && npm run release",
     "brew-bump:dry-run": "BIT_VERSION=$(cat ./package.json | jq .version -r) && brew bump-formula-pr bit --url='https://registry.npmjs.org/bit-bin/-/bit-bin-${BIT_VERSION}.tgz' --message='version bump' --dry-run",
