--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -590,7 +590,7 @@ jobs:
       - update_ssh_agent
       - set_git_credentials
       # temporarily to understand the issue with the "EMFILE, too many open files" error.
-      - ulimit -a
+      - run: ulimit -a
       - run:
           name: export components
           command: cd bit && bit export
