--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -171,7 +171,7 @@
         "cli-highlight": "2.1.9",
         "comlink": "4.3.0",
         "copy-to-clipboard": "^3.3.1",
-        "core-js": "^3.6.5",
+        "core-js": "3.8.3",
         "cors": "^2.8.5",
         "credentials-by-uri": "2.0.0",
         "cross-fetch": "3.0.6",
