--- a/package.json
+++ b/package.json
@@ -200,7 +200,7 @@
     "porter-stemmer": "^0.9.1",
     "prompt": "^1.0.0",
     "ramda": "^0.24.1",
-    "ramda-adjunct": "^2.25.0",
+    "ramda-adjunct": "2.30.0",
     "react-docgen": "^5.3.0",
     "react-docgen-typescript": "^1.18.0",
     "read-pkg-up": "^7.0.1",
