--- a/build-harmony/package.json
+++ b/build-harmony/package.json
@@ -11,5 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@teambit/bit": "0.0.285"
+  },
+  "resolutions": {
+    "@teambit/bit/core-js": "3.8.3",
+    "@teambit/bit/ramda-adjunct": "2.30.0",
+    "@teambit/legacy/ramda-adjunct": "2.30.0"
   }
 }
