remove ramda-adjunct from resolution

--- a/build-harmony/package.json
+++ b/build-harmony/package.json
@@ -13,9 +13,6 @@
     "@teambit/bit": "0.0.285"
   },
   "resolutions": {
-    "@teambit/bit/core-js": "3.8.3",
-    "@teambit/bit/ramda-adjunct": "2.30.0",
-    "@teambit/legacy/ramda-adjunct": "2.30.0",
-    "ramda-adjunct": "2.30.0"
+    "@teambit/bit/core-js": "3.8.3"
   }
 }
