add owner border to avatar

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -65,12 +65,12 @@
         "@teambit/base-ui.text.muted-text": "^0.5.9",
         "@teambit/base-ui.text.paragraph": "^0.5.9",
         "@teambit/base-ui.text.themed-text": "^0.5.9",
-        "@teambit/base-ui.theme.color-palette": "^0.5.9",
-        "@teambit/base-ui.theme.colors": "^0.5.9",
-        "@teambit/base-ui.theme.dark-theme": "^0.5.9",
-        "@teambit/base-ui.theme.fonts.roboto": "0.6.2",
-        "@teambit/base-ui.theme.sizes": "^0.5.9",
-        "@teambit/base-ui.theme.theme-provider": "^0.5.9",
+        "@teambit/base-ui.theme.color-palette": "0.6.3",
+        "@teambit/base-ui.theme.colors": "0.6.3",
+        "@teambit/base-ui.theme.dark-theme": "0.6.3",
+        "@teambit/base-ui.theme.fonts.roboto": "0.6.3",
+        "@teambit/base-ui.theme.sizes": "0.6.3",
+        "@teambit/base-ui.theme.theme-provider": "0.6.4",
         "@teambit/base-ui.utils.string.affix": "0.0.2",
         "@teambit/base-ui.utils.sub-paths": "^0.5.9",
         "@teambit/base-ui.utils.time-ago": "0.5.9",
