--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -192,6 +192,7 @@
         "fuse.js": "^6.4.1",
         "get-port": "^5.1.1",
         "globby": "11.0.1",
+        // TODO: remove this once this is merged https://github.com/isaacs/node-graceful-fs/pull/202
         "graceful-fs": "4.2.4",
         "graphql-subscriptions": "^1.1.0",
         "graphql-tag": "^2.10.3",
@@ -486,6 +487,8 @@
         "policy": {
           "dependencies": {
             "@teambit/legacy": "1.0.8",
+            // TODO: remove this later
+            "core-js": "3.8.3",
             "react": "^16.13.1",
             "react-dom": "^16.13.1",
             "graphql": "^14.3.1",
