--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -597,7 +597,7 @@ jobs:
           command: cd bit-${BIT_VERSION} && npm init -y && yarn add @teambit/bit
       - run:
           name: remove leftovers
-          command: cd bit-${BIT_VERSION} && rm package.json && yarn.lock
+          command: cd bit-${BIT_VERSION} && rm package.json && rm yarn.lock
       - run:
           name: compress bit
           command: tar -cvf bit-${BIT_VERSION}.tar.gz bit-${BIT_VERSION}
