--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -13,7 +13,7 @@
         "@apollo/client": "3.3.6",
         "@babel/core": "7.11.6",
         "@babel/preset-react": "7.12.7",
-        "@babel/preset-typescript": "7.10.4",
+        "@babel/preset-typescript": "7.12.7",
         "@graphql-modules/core": "0.7.17",
         "@jest/test-result": "26.6.2",
         "@mdx-js/loader": "1.6.21",
@@ -535,7 +535,8 @@
             "@babel/plugin-transform-runtime": "7.12.17",
             "@babel/preset-env": "7.12.17",
             "babel-plugin-transform-typescript-metadata": "0.3.1",
-            "@babel/preset-react": "7.12.13"
+            "@babel/preset-react": "7.12.13",
+            "@babel/preset-typescript": "7.12.7"
           }
         }
       }
