--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -556,8 +556,8 @@ jobs:
       - run:
           name: tag persist
           # command: cd bit && bit tag --all --ignore-newest-version
-          command: cd bit && bit tag --all
-          # command: cd bit && bit tag --persist --ignore-newest-version
+          # command: cd bit && bit tag --all
+          command: cd bit && bit tag --persist --ignore-newest-version
           no_output_timeout: '25m'
           environment:
             NODE_OPTIONS: --max_old_space_size=4096
