change CircleCI bit-tag job back to tag only modified

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -557,8 +557,8 @@ jobs:
       - run:
           name: tag persist
           # command: cd bit && bit tag --all --ignore-newest-version
-          command: cd bit && bit tag --scope 0.0.297
-          # command: cd bit && bit tag --all
+          # command: cd bit && bit tag --scope 0.0.297
+          command: cd bit && bit tag --all
           # command: cd bit && bit tag --persist --ignore-newest-version
           no_output_timeout: '25m'
           environment:
