add publish to gcloud job to circle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -610,6 +610,36 @@ jobs:
           name: Upload tar file
           command: ./jfrog rt u "bit-${BIT_VERSION}.tar.gz" bvm/dev/${BIT_VERSION}/bit-${BIT_VERSION}.tar.gz --flat=false
 
+  harmony_publish_to_gcloud:
+    docker:
+      - image: google/cloud-sdk
+    <<: *defaults
+    steps:
+      - run:
+          name: print bit version
+          command: npm view @teambit/bit version
+      - run:
+          name: Setup bit version environment variables
+          command: echo "export BIT_VERSION=$(npm view @teambit/bit version)" >> $BASH_ENV && source $BASH_ENV
+      - run:
+          name: create empty folder
+          command: mkdir bit-${BIT_VERSION}
+      - run:
+          name: install bit
+          command: cd bit-${BIT_VERSION} && npm init -y && yarn add @teambit/bit
+      - run:
+          name: remove leftovers
+          command: cd bit-${BIT_VERSION} && rm package.json && rm yarn.lock
+      - run:
+          name: compress bit
+          command: tar -cvf bit-${BIT_VERSION}.tar.gz bit-${BIT_VERSION}
+      - run:
+          name: Configure gcloud auth
+          command: echo 'todo'
+      - run:
+          name: Upload tar file
+          command: echo 'todo'
+
   bit_export:
     <<: *defaults
     environment:
@@ -1203,3 +1233,9 @@ workflows:
           requires:
             - harmony_deploy_approval_job
             - bit_tag
+  publish_to_gcloud:
+    jobs:
+      - harmony_publish_to_gcloud:
+            filters:
+              branches:
+                only: gcloud-upload
