--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -158,6 +158,7 @@
         "apollo-link-ws": "1.0.20",
         "apollo-server": "2.19.2",
         "apollo-utilities": "1.3.4",
+        "async-mutex": "0.3.1",
         "aws-sdk": "2.756.0",
         "babel-jest": "26.6.3",
         "babel-plugin-named-asset-import": "0.3.7",
