--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "@vuedoc/parser": "2.4.0",
     "acorn": "6.4.2",
     "ajv": "6.12.6",
+    "async-mutex": "0.3.1",
     "app-module-path": "2.2.0",
     "array-difference": "0.0.2",
     "bluebird": "3.7.2",
