--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -625,22 +625,21 @@ jobs:
       - run:
           name: create empty folder
           command: mkdir bit-${BIT_VERSION}
-      # - run:
-      #     name: install bit
-      #     command: cd bit-${BIT_VERSION} && npm init -y && yarn add @teambit/bit
-      # - run:
-      #     name: remove leftovers
-      #     command: cd bit-${BIT_VERSION} && rm package.json && rm yarn.lock
-      # - run:
-      #     name: compress bit
-      #     command: tar -cvf bit-${BIT_VERSION}.tar.gz bit-${BIT_VERSION}
-      - run: echo "bit" >> bit.txt  
+      - run:
+          name: install bit
+          command: cd bit-${BIT_VERSION} && npm init -y && yarn add @teambit/bit
+      - run:
+          name: remove leftovers
+          command: cd bit-${BIT_VERSION} && rm package.json && rm yarn.lock
+      - run:
+          name: compress bit
+          command: tar -cvf bit-${BIT_VERSION}.tar.gz bit-${BIT_VERSION}
       - run:
           name: Configure gcloud auth
           command: echo "${COMMAND_GCLOUD_AUTHENTICATE}" > /tmp/gcloud-service-key.json && gcloud auth activate-service-account --key-file=/tmp/gcloud-service-key.json
       - run:
           name: Upload tar file
-          command: gsutil cp bit.txt gs://bvm.bit.dev
+          command: gsutil cp bit-${BIT_VERSION}.tar.gz gs://bvm.bit.dev/versions/dev
 
   bit_export:
     <<: *defaults
