CircleCI - change back the bit-checkout to delete node-modules beforehand as the ENOENT error from Yarn was not fixed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -547,11 +547,11 @@ jobs:
       - run: cd bit && node scripts/bump-bit-legacy-ver.js
       - run: cd bit && bit status
       # temporarily. otherwise it fails on bit-checkout during Yarn installation with "Error: ENOENT: no such file or directory, chmod '/home/******ci/bit/bit/node_modules/@teambit/legacy/node_modules/@babel/core/node_modules/semver/bin/semver'""
-      # - run: cd bit && rm -rf node_modules
-      # - run: cd bit && build-harmony/node_modules/.bin/bbit checkout latest --all --skip-npm-install
-      - run: cd bit && rm -rf node_modules/@teambit/legacy
-      - run: cd bit && build-harmony/node_modules/.bin/bbit checkout latest --all
-      - run: cd bit && npm run link-bit-legacy
+      - run: cd bit && rm -rf node_modules
+      - run: cd bit && build-harmony/node_modules/.bin/bbit checkout latest --all --skip-npm-install
+      # - run: cd bit && rm -rf node_modules/@teambit/legacy
+      # - run: cd bit && build-harmony/node_modules/.bin/bbit checkout latest --all
+      # - run: cd bit && npm run link-bit-legacy
       # since we removed the node_modules we need to make sure we compile, install and link everything again
       # - run:
       #     name: 'build harmony'
