--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1181,7 +1181,7 @@ workflows:
           <<: *master_only_filter
           requires:
             - setup_harmony
-      - publish_to_gcloud:
+      - harmony_publish_to_gcloud:
           <<: *master_only_filter
           requires:
             - bit_tag
@@ -1221,7 +1221,7 @@ workflows:
           requires:
             - harmony_deploy_approval_job
             - setup_harmony
-      - publish_to_gcloud:
+      - harmony_publish_to_gcloud:
           <<: *master_only_filter
           requires:
             - harmony_deploy_approval_job
