--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -613,6 +613,36 @@ jobs:
           name: Upload tar file
           command: ./jfrog rt u "bit-${BIT_VERSION}.tar.gz" bvm/dev/${BIT_VERSION}/bit-${BIT_VERSION}.tar.gz --flat=false
 
+  harmony_publish_to_gcloud:
+    docker:
+      - image: bitcli/node-gcloud-sdk
+    <<: *defaults
+    steps:
+      - run:
+          name: print bit version
+          command: npm view @teambit/bit version
+      - run:
+          name: Setup bit version environment variables
+          command: echo "export BIT_VERSION=$(npm view @teambit/bit version)" >> $BASH_ENV && source $BASH_ENV
+      - run:
+          name: create empty folder
+          command: mkdir bit-${BIT_VERSION}
+      - run:
+          name: install bit
+          command: cd bit-${BIT_VERSION} && npm init -y && yarn add @teambit/bit
+      - run:
+          name: remove leftovers
+          command: cd bit-${BIT_VERSION} && rm package.json && rm yarn.lock
+      - run:
+          name: compress bit
+          command: tar -cvf bit-${BIT_VERSION}.tar.gz bit-${BIT_VERSION}
+      - run:
+          name: Configure gcloud auth
+          command: echo "${COMMAND_GCLOUD_AUTHENTICATE}" > /tmp/gcloud-service-key.json && gcloud auth activate-service-account --key-file=/tmp/gcloud-service-key.json
+      - run:
+          name: Upload tar file
+          command: gsutil cp bit-${BIT_VERSION}.tar.gz gs://bvm.bit.dev/versions/dev
+
   bit_export:
     <<: *defaults
     environment:
@@ -1151,7 +1181,7 @@ workflows:
           <<: *master_only_filter
           requires:
             - setup_harmony
-      - harmony_publish_to_jfrog:
+      - harmony_publish_to_gcloud:
           <<: *master_only_filter
           requires:
             - bit_tag
@@ -1191,7 +1221,7 @@ workflows:
           requires:
             - harmony_deploy_approval_job
             - setup_harmony
-      - harmony_publish_to_jfrog:
+      - harmony_publish_to_gcloud:
           <<: *master_only_filter
           requires:
             - harmony_deploy_approval_job
